# auto-docs

./: .gitignore  Cargo.toml  Dockerfile  README.md  license
src/: chat.rs  main.rs
test_docs/: auto_doc.yaml
test_docs/src/: lib.rs
web/src/layouts/: Layout.astro
