[package]
name = "auto-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features=["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
